PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>예산</label>
    <nameField>
        <label>예산이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>