PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/BudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>예산금액 (입력용)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>