PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/BudgetType__c.field-meta.xml
<CustomField>
    <fullName>BudgetType__c</fullName>
    <label>예산배정단위</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BudgetType</valueSetName>
    </valueSet>
</CustomField>