PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/fm_ActiveStatus__c.field-meta.xml
<CustomField>
    <fullName>fm_ActiveStatus__c</fullName>
    <formula>IF( 
    ISPICKVAL( BudgetType__c , &quot;프로젝트&quot;), TRUE,
    YEAR( ADDMONTHS( TODAY(), -1 )) = VALUE(TEXT(Year__c))
   )</formula>
    <label>활성여부</label>
    <type>Checkbox</type>
</CustomField>