PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/fm_BudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>fm_BudgetAmount__c</fullName>
    <formula>IF( ISBLANK( Project__c ),  BudgetAmount__c ,   fm_BudgetAmountProject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>예산금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>