PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/fm_BudgetAmountProject__c.field-meta.xml
<CustomField>
    <fullName>fm_BudgetAmountProject__c</fullName>
    <description>해당 프로젝트의 &apos;프로젝트 비용 예산&apos; 중 승인된 금액의 합 표시 (=프로젝트의 비용예산)</description>
    <formula>Project__r.ru_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>해당 프로젝트의 &apos;프로젝트 비용 예산&apos; 중 승인된 금액의 합이 표시됩니다.</inlineHelpText>
    <label>예산금액 (프로젝트)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>