PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/fm_RemainingAmount__c.field-meta.xml
<CustomField>
    <fullName>fm_RemainingAmount__c</fullName>
    <formula>fm_BudgetAmount__c - UsedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>예산잔여금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>