PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>프로젝트</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>BudgetProject</relationshipName>
    <type>Lookup</type>
</CustomField>