PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/fields/UsedAmount__c.field-meta.xml
<CustomField>
    <fullName>UsedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>해당 예산으로 신청된 경비 중 승인된 경비금액의 합 표시</description>
    <inlineHelpText>해당 예산으로 신청된 경비 중 승인된 경비금액의 합이 표시됩니다.</inlineHelpText>
    <label>예산사용금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>