PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/validationRules/Select_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Project</fullName>
    <active>true</active>
    <description>예산배정단위가 프로젝트이면 프로젝트 값을 필수로 선택</description>
    <errorConditionFormula>AND(
    ISPICKVAL( BudgetType__c , &apos;프로젝트&apos;),
    ISBLANK(Project__c)
)</errorConditionFormula>
    <errorMessage>예산배정단위가 프로젝트일 경우 프로젝트를 선택해야합니다.</errorMessage>
</ValidationRule>