PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>BudgetType__c</columns>
    <columns>Year__c</columns>
    <columns>Project__c</columns>
    <columns>fm_BudgetAmount__c</columns>
    <columns>UsedAmount__c</columns>
    <columns>fm_RemainingAmount__c</columns>
    <columns>fm_ActiveStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fm_ActiveStatus__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BudgetType__c</field>
        <operation>equals</operation>
        <value>프로젝트</value>
    </filters>
    <label>활성화된 예산</label>
</ListView>