PA_Education/TestMenifest/force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BudgetType__c</columns>
    <columns>Year__c</columns>
    <columns>Project__c</columns>
    <columns>fm_BudgetAmount__c</columns>
    <columns>UsedAmount__c</columns>
    <columns>fm_RemainingAmount__c</columns>
    <columns>fm_ActiveStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>